// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSchedule should render ltr radio schedules correctly 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <ul
    class="GridComponent-nf79gm-0 kCcGpG StyledGrid-sc-1q74lji-1 dHsDNK"
    dir="ltr"
    role="list"
  >
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="live"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    aria-hidden="true"
                    class="emotion-0 emotion-1"
                    dir="ltr"
                  >
                    LIVE 
                  </span>
                  <span
                    class="emotion-2 emotion-3"
                    lang="en-GB"
                  >
                    Live, 
                  </span>
                </span>
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 kPODHC"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 fastOq"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="onDemand"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 ihgFOy"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/news/articles/cn7k01xp8kxo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                Could a computer ever create better art than a human?
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  14:54
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 kqgECY"
                >
                  27 August 2019
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 fastOq"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="next"
      dir="ltr"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 iKXvCy"
            dir="ltr"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 cUASrx"
            dir="ltr"
          >
            <time
              class="StyledTimestamp-um718p-0 kIQQTq"
              datetime="2019-08-27"
            >
              14:54
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 hlWgZt"
          >
            <span
              class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
              role="text"
            >
              <span
                class="NextLabel-sc-6oo8lp-5 kzBJH"
                dir="ltr"
              >
                NEXT 
              </span>
              Could a computer ever create better art than a human?
              <span
                class="emotion-2 emotion-3"
              >
                , 
                14:54
                , 
              </span>
              <span
                class="TitleWrapper-sc-6oo8lp-0 gaBXGU"
              >
                27 August 2019
              </span>
            </span>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 Lptrc"
          >
            The critic, author, poet and TV host was known for his witty commentary on international television.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 glhZpD"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 gqyxry"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 fMidIG"
            datetime="PT1H"
            dir="ltr"
          >
            <span
              class="emotion-2 emotion-3"
            >
               Duration 1,00,00 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              1:00:00
            </span>
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`RadioSchedule should render rtl radio schedules correctly 1`] = `
.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-0 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-left: 0.5rem;
}

<div>
  <ul
    class="GridComponent-nf79gm-0 kCcGpG StyledGrid-sc-1q74lji-1 dHsDNK"
    dir="rtl"
    role="list"
  >
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="live"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                <span
                  role="text"
                >
                  <span
                    class="emotion-0 emotion-1"
                    dir="rtl"
                  >
                    مباشر 
                  </span>
                </span>
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 jyGpUG"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="onDemand"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 bQOdKp"
          >
            <a
              class="Link-sc-1dvfmi3-5 StyledLink-sc-6oo8lp-1 dCvEUl"
              href="/arabic/articles/c1er5mjnznzo"
            >
              <span
                class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
                role="text"
              >
                لماذا يخجل البعض من اسم قريته في مصر؟
                <span
                  class="emotion-2 emotion-3"
                >
                  , 
                  ١٤:٥٤
                  , 
                </span>
                <span
                  class="TitleWrapper-sc-6oo8lp-0 eEiwMK"
                >
                  ٢٧ أغسطس ٢٠١٩
                </span>
              </span>
            </a>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 bVNTNn"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 dKFQcC"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
    <li
      class="GridComponent-nf79gm-0 cxONfP StyledFlexGrid-sc-1q74lji-2 itXDho"
      data-e2e="next"
      dir="rtl"
      role="listitem"
    >
      <div
        class="StartTimeWrapper-sc-1q74lji-0 kamCRN"
      >
        <div
          class="Wrapper-ojp38q-0 iLZIDn"
        >
          <span
            class="StyledClock-ojp38q-1 gushnz"
            dir="rtl"
          >
            <svg
              aria-hidden="true"
              class="CoreIcon-sc-1eqhzay-0 ClockIcon-sc-1eqhzay-1 geFUte"
              focusable="false"
              height="13"
              viewBox="0 0 13 13"
              width="13"
            >
              <path
                d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
              />
              <path
                d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
              />
            </svg>
          </span>
          <span
            aria-hidden="true"
            class="StyledTimestamp-ojp38q-2 extvvV"
            dir="rtl"
          >
            <time
              class="StyledTimestamp-um718p-0 cIBmPD"
              datetime="2019-08-27"
            >
              ١٤:٥٤
            </time>
          </span>
        </div>
      </div>
      <div
        class="CardWrapper-sc-6oo8lp-2 jgjrOO"
      >
        <div
          class="TextWrapper-sc-6oo8lp-3 bcFowo"
        >
          <h3
            class="StyledH3-sc-6oo8lp-4 dhiUqF"
          >
            <span
              class="HeadingContentWrapper-sc-6oo8lp-11 jHsaER"
              role="text"
            >
              <span
                class="NextLabel-sc-6oo8lp-5 inodZf"
                dir="rtl"
              >
                مباشر 
              </span>
              لماذا يخجل البعض من اسم قريته في مصر؟
              <span
                class="emotion-2 emotion-3"
              >
                , 
                ١٤:٥٤
                , 
              </span>
              <span
                class="TitleWrapper-sc-6oo8lp-0 dDIrbk"
              >
                ٢٧ أغسطس ٢٠١٩
              </span>
            </span>
          </h3>
          <p
            class="SummaryWrapper-sc-6oo8lp-6 kdiuZL"
          >
            هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
          </p>
        </div>
        <div
          class="ButtonWrapper-sc-6oo8lp-7 eXCEFe"
        >
          <span
            class="IconWrapper-sc-6oo8lp-8 gqyxry"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </span>
          <time
            class="DurationWrapper-sc-6oo8lp-9 hWRNdd"
            datetime="PT1H"
            dir="rtl"
          >
            <span
              class="emotion-2 emotion-3"
            >
               المدة الزمنية ١،٠٠،٠٠ 
            </span>
            <span
              aria-hidden="true"
              class="DurationTextWrapper-sc-6oo8lp-10 dfaGSJ"
            >
              ١:٠٠:٠٠
            </span>
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
